# 5safe-deployment-setup

./: .gitattributes  .gitignore  configuration.nix  constants.nix  flake.nix  hardware-configuration.nix  home.nix  secrets.nix
k3s/: agent.nix  server.nix
k3s/services/: default.nix
profiles/agent-1/: configuration.nix  home.nix
profiles/main-server/: configuration.nix  hardware-configuration.nix  home.nix
profiles/mobile/: configuration.nix  hardware-configuration.nix  home.nix
profiles/server/: configuration.nix  hardware-configuration.nix
profiles/static/: configuration.nix  hardware-configuration.nix  home.nix
profiles/worker-server/: configuration.nix
secrets/: db-password.age  default.nix  secrets.json
security/: firewall.nix
system/: services.nix
system/app/: docker.nix  gamemode.nix  virtualization.nix
system/disko-config/: default.nix  gpt-lvm-btrfs.nix
system/hardware/: audio.nix  bluetooth.nix  default.nix  nvidia.nix  opengl.nix  time.nix
system/networking/: default.nix  nginx.nix
system/security/: default.nix  firejail.nix  firewall.nix  gpg.nix
system/style/: stylix.nix
system/wm/: default.nix  gnome.nix  kde.nix  qtile.nix  wayland.nix  x11.nix  xfce.nix  xmonad.nix  (+1 more)
user/wm/qtile/qtile_config/: .gitignore  colors.py.mustache  config.py  default.nix  pyproject.toml
user/wm/qtile/qtile_config/.direnv/: nix-profile-24.05-mvz96grv31nxq69l  nix-profile-24.05-mvz96grv31nxq69l.rc
user/wm/qtile/qtile_config/qtile_config/: config.py  groups.py  hooks.py  keys.py  layouts.py  main.py  params.py  screens.py  startup.sh  utils.py
(+368 files in other folders)
