[tool.poetry]
name = "qtile-config"
version = "0.1.0"
description = ""
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qtile = {extras = ["all"], version = "^0.28.1"}
qtile-extras = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
